[CONJ-1120] pushing maven export to pom.xml